test/libsolidity/syntaxTests/inlineAssembly/assembly_empty_option_list.sol
function f() pure {
    assembly () {}
}
// ----
// ParserError 2314: (34-35): Expected 'StringLiteral' but got ')'
